# rsomics-bed-map

./: Cargo.toml
benches/: bed_map.rs  bench.rs
src/: cli.rs  driver.rs  index.rs  lib.rs  ops.rs
tests/: compat.rs
tests/golden/: a.bed  b.bed
